force-app/main/default/objects/Seat__c/Seat__c.object-meta.xml
<CustomObject>
    <label>Seat</label>
    <nameField>
        <displayFormat>S-No-{0000}</displayFormat>
        <label>Seats Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>