force-app/main/default/objects/Seat__c/fields/Bus_Trip__c.field-meta.xml
<CustomField>
    <fullName>Bus_Trip__c</fullName>
    <label>Bus Trip</label>
    <referenceTo>Bus_Trip__c</referenceTo>
    <relationshipLabel>Seats</relationshipLabel>
    <relationshipName>Seats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>