force-app/main/default/objects/Seat__c/fields/Is_Occupied__c.field-meta.xml
<CustomField>
    <fullName>Is_Occupied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Occupied</label>
    <type>Checkbox</type>
</CustomField>