force-app/main/default/objects/Seat__c/fields/Occupied__c.field-meta.xml
<CustomField>
    <fullName>Occupied__c</fullName>
    <formula>IF(Tagged_Ticket__c = null ||  ISPICKVAL(Tagged_Ticket__r.Ticket_Status__c ,&#39;Canceled&#39;) , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupied</label>
    <type>Checkbox</type>
</CustomField>