force-app/main/default/objects/Seat__c/fields/Tagged_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Tagged_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tagged Ticket</label>
    <referenceTo>Bus_Ticket__c</referenceTo>
    <relationshipLabel>Seats</relationshipLabel>
    <relationshipName>Seats</relationshipName>
    <type>Lookup</type>
</CustomField>