force-app/main/default/objects/Seat__c/fields/Ticket_cost__c.field-meta.xml
<CustomField>
    <fullName>Ticket_cost__c</fullName>
    <formula>Bus__r.Ticket_price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>