force-app/main/default/objects/Seat__c/fields/Ticket_Price__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Price__c</fullName>
    <formula>Bus_Trip__r.Bus__r.Ticket_price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>